# podcast-pipeline

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Justfile  README.md  beadsflow.toml  mkdocs.yml  pyproject.toml
.beads/: .gitignore  issues.jsonl  metadata.json
.github/workflows/: ci.yml
docs/: conf.py  index.md  requirements.txt
docs/_static/: .keep
docs/_templates/: .keep
docs/decisions/: docs-stack.md  index.md
docs/explanation/: developer-guide.md  index.md  mvp0-review-loop.md  mvp1-review-loop.md  (+1 more)
specs/: 2025-12-17_podcast_automation_prd.md  README.md
tests/: __init__.py  golden_utils.py  test_agent_cli_config.py  test_asset_candidates_llm.py  test_auphonic_payload.py  test_claude_reviewer_runner.py  test_cli_draft_candidates.py  test_cli_draft_fake_runner.py  test_cli_draft_pipeline.py  test_cli_ingest.py  test_cli_init.py  test_cli_status.py  test_cli_summarize_dry_run.py  test_cms_examples.py  test_codex_creator_runner.py  test_dashboard_web.py  test_domain_models.py  test_draft_pipeline.py  test_drafter_runner.py  test_e2e_description_converges.py  test_fake_agent_runners.py  test_few_shot_selector.py  test_fixtures.py  test_ingest_track_discovery.py  test_markdown_html.py  test_pick_core.py  test_pick_web.py  test_prompting.py  test_protocol_schemas.py  test_review_loop_engine.py  test_review_loop_orchestrator.py  test_rss_examples.py  test_schema_versioned.py  test_smoke.py  test_summarization_llm.py  test_summarization_stub.py  test_tag_parsing.py  test_transcribe_entrypoint.py  test_transcript_chunker.py  test_workspace_store.py
(+65 files in other folders)
