[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[project]
name = "podcast-pipeline"
version = "0.1.0"
description = "Local-first automation pipeline for podcast episode production"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.9",
  "typer>=0.12",
]

[project.scripts]
podcast = "podcast_pipeline.entrypoints.cli:main"

[dependency-groups]
dev = [
  "mkdocs>=1.6.0",
  "mypy>=1.16.0",
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "ruff>=0.12.0",
  "types-pyyaml>=6.0.12.20240917",
]

[tool.uv.build-backend]
module-name = "podcast_pipeline"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-q"]

[tool.ruff]
line-length = 119
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C90",  # mccabe
  "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
